Modified text of QR Code Generator card

--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@
             <img class="card-img-top" src="assets/Images/QR_Code_Generator.png" alt="QR_Code_Generator">
             <div class="card-body">
                 <h5 class="card-title">QR Code Generator</h5>
-                <p>Shows which key one has pressed on the keyboard.</p>
+                <p>It Generates QR Code with respect to contain added</p>
                 <a href="Public/QR_Code_Generator.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
             </div>
         </div>
