--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
           window.open("./Public/RD-return-calculator.html");
         if (filter == "SPEECH SYNTHESIS")
           window.open("./Public/speech_synthesis.html");
+        if (filter == "COLOR CHANGING APP")
+          window.open("./Public/Color-Changing-App.html"); 
 	if (filter == "TIC TAC TOE")
           window.open("./Public/tic-tac-toe.html");
       }
