--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
           window.open("./Public/hangman.html");
         if (filter == "TO-DO LIST")
           window.open("./Public/to-do.html");
+        if (filter == "MOVIE/TV SERIES QUOTE GENERATOR")
+          window.open(".Public/MovieQuoteGenerator.html");
         if (filter == "PORTFOLIO WEBSITE")
           window.open("/Public/multiple-portfolio.html");
         if (filter == "TRANSPOSE-MATRIX CALCULATOR")
