--- a/Public/MovieQuoteGenerator.html
+++ b/Public/MovieQuoteGenerator.html
@@ -12,7 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-        <p class="heading">Movie Quote Generator<p>
+        <p class="heading" id="header">Movie Quote Generator<p>
+        </br>
         </br>
         <!-- Quote Container -->
         <div class="container">
