--- a/index.html
+++ b/index.html
@@ -209,8 +209,11 @@
           window.open("./Public/speech_synthesis.html");
         if (filter == "COLOR CHANGING APP")
           window.open("./Public/Color-Changing-App.html"); 
-	if (filter == "TIC TAC TOE")
+      	if (filter == "TIC TAC TOE")
           window.open("./Public/tic-tac-toe.html");
+      }
+      if(filter == "MICROSOFT CLONE"){
+        window.open("./Public/microsoftclone.html")
       }
     </script>
     <button id="back-to-top">
