--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
           window.open("./Public/Color-Changing-App.html"); 
       	if (filter == "TIC TAC TOE")
           window.open("./Public/tic-tac-toe.html");
+        if (filter == "STOPWATCH")
+        window.open("./Public/stopwatch.html");
       }
       if(filter == "MICROSOFT CLONE"){
         window.open("./Public/microsoftclone.html")
