--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
           window.open("Public/color_flipper_2.html");
         if (filter == "DIGITAL CLOCK")
           window.open("Public/digital_clock.html");
+        if (filter == "DIAL CODE FETCHER")
+          window.open("Public/DialCodeFetcher.html");
         if (filter == "LOG-IN FORM")
           window.open("Public/loginform.html");
         if (filter == "PURPLE HEART ANIMATION")
