--- a/Public/DialCodeFetcher.html
+++ b/Public/DialCodeFetcher.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Country Code and Dial Code Fetcher</title>
-  <link rel="stylesheet" href="/assets/css/DialCodeFetcher.css">
+  <link rel="stylesheet" href="../assets/css/DialCodeFetcher.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,7 @@
       <td id="flag"></td>
     </tr>
   </main>
-  <script type="text/javascript" src="/assets/Js/DialCodeFetcher/list.json"></script>
-  <script src="/assets/Js/DialCodeFetcher/DialCodeFetcher.js" type="text/javascript"></script>
+  <script type="text/javascript" src="../assets/Js/DialCodeFetcher/list.json"></script>
+  <script src="../assets/Js/DialCodeFetcher/DialCodeFetcher.js" type="text/javascript"></script>
 </body>
 </html>
