--- a/Public/DialCodeFetcher.html
+++ b/Public/DialCodeFetcher.html
@@ -41,7 +41,7 @@
       <td id="flag"></td>
     </tr>
   </main>
-  <script type="text/javascript" src="../assets/Js/DialCodeFetcher/list.json"></script>
+  <script type="text/javascript" src="../assets/Js/DialCodeFetcher/list.js"></script>
   <script src="../assets/Js/DialCodeFetcher/DialCodeFetcher.js" type="text/javascript"></script>
 </body>
 </html>
