--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
       if(filter == "MICROSOFT CLONE"){
         window.open("./Public/microsoftclone.html")
       }
+	    if(filter == "DRAWING APP"){
+        window.open("./Public/drawingapp.html")
+      }
     </script>
 
   </div>
