--- a/Public/CaesarCipher.html
+++ b/Public/CaesarCipher.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/CaesarCipher.css">
-    <script type="text/javascript" src="/assets/Js/CaesarCipher.js"></script>
+    <link rel="stylesheet" href="../assets/css/CaesarCipher.css">
+    <script type="text/javascript" src="../assets/Js/CaesarCipher.js"></script>
   </head>
 
   <body>
@@ -22,11 +22,11 @@
     </style>
 
     <p style="text-align: center">
-      <a class="center" style="font-size: 60px; color: black; font-family: Montserrat; font-weight: bold; vertical-align:bottom">CAESAR CIPHER</a>
+      <a class="center" style="font-size: 60px; color: black; font-family: Montserrat; font-weight: bold; vertical-align:bottom;filter:drop-shadow(8px 8px 10px brown);">CAESAR CIPHER</a>
     </p>
 
     <p style="text-align: left; line-height: 50px">
-      <a  style="font-size: 30px; color: black; font-family: Roboto; font-weight:medium; vertical-align: bottom">Enter your message for encryption:</a>
+      <a  style="font-size: 30px; color: black; font-family: Roboto; font-weight:bold; vertical-align: bottom">Enter your message for encryption:</a>
     </p>
 
     <p style="line-height: 50px">
@@ -48,7 +48,7 @@
 
     <p style="text-align: left; line-height:50px">
 
-      <a style="font-size: 30px; color: black; font-family: Roboto; font-weight:medium; vertical-align: bottom">Enter your encrypted message for decryption:</a>
+      <a style="font-size: 30px; color: black; font-family: Roboto; font-weight:bold; vertical-align: bottom">Enter your encrypted message for decryption:</a>
         <form> <input type="text" id="DecryptMessage" size="25"> </form>
      
 
