Update the code and added my project to projects index.html file

--- a/index.html
+++ b/index.html
@@ -241,6 +241,16 @@
         </div>
      <!-- end of speed typer -->
 
+     <!-- this is for responsive Landing Page  -->
+     <div class="card">
+       <img src="assets/Images/responsiveWeb.png.png" alt="Responsive landing_page" class="card-img-top">
+       <div class="card-body">
+         <h5 class="card-title">Responsive Landing Page</h5>
+         <p>A landing page with some animations</p>
+         <a href="/Public/responsiveLanding.html" class="btn btn-outline-primary">Try now</a>
+       </div>
+     </div>
+
 <!-- This is for Caesar Cipher -->
 <div class = "card">
   <!-- Start of Caesar Cipher -->
