--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
           window.open("./Public/Color-Changing-App.html"); 
       	if (filter == "TIC TAC TOE")
           window.open("./Public/tic-tac-toe.html");
+	if (filter == "BOOK SHOPPING WEBSITE")
+          window.open("./Public/book.html");
       }
       if(filter == "MICROSOFT CLONE"){
         window.open("./Public/microsoftclone.html")
