--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       	if (filter == "TIC TAC TOE")
           window.open("./Public/tic-tac-toe.html");
 	if (filter == "BOOK SHOPPING WEBSITE")
-          window.open("./Public/book.html");
+          window.open("./Public/book-shopping-website/book.html");
       }
       if(filter == "MICROSOFT CLONE"){
         window.open("./Public/microsoftclone.html")
