Add website favicon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <script src="assets/Js/Speed_Typer.js" defer></script>
     <script src="assets/Js/guess-the-number.js" defer></script>
 
-
+    <!-- website favicon -->
+    <link rel="icon" href="favicon_web.ico">
 
 
     <title>Landing Page</title>
