--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         filter = input.value.toUpperCase();
         if (filter == "ANALOG CLOCK")
           window.open("Public/Analog_clock.html");
+        if (filter == "PALINDROME CHECKER")
+          window.open("Public/palindrome.html");
         if (filter == "AUTO WRITE TEXT")
           window.open("Public/auto-write-text.html");
         if (filter == "WORD DEFINITION")
