--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="assets/Js/guess-the-number.js" defer></script>
 
     <!-- website favicon -->
-    <link rel="icon" href="favicon_web.ico">
+    <link rel="icon" href="web_favicon.ico">
 
 
     <title>Landing Page</title>
