--- a/index.html
+++ b/index.html
@@ -31,17 +31,10 @@
   <link href="assets/css/landing_page.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
-  <!-- <script src="assets/js/analog_clock1.js" defer></script>
-  <script src="assets/js/auto-write-text1.js" defer></script>
-  <script src="assets/js/calculator.js" defer></script>
-  <script src="assets/Js/quiz.js" defer></script>
-  <script src="assets/Js/weather_app.js" defer></script>
-  <script src="assets/Js/Speed_Typer.js" defer></script>
-  <script src="assets/Js/guess-the-number.js" defer></script>
-  <script src="./cardsData.js"></script> -->
+  
 
     <!-- website favicon -->
-    <link rel="icon" href="web_favicon.ico">
+    <link rel="icon" href="/favicon-32x32.png">
 
 
   <title>Landing Page</title>
