--- a/index.html
+++ b/index.html
@@ -749,6 +749,17 @@
         </div>
         <!--End of  QR_Code_Generator-->
 
+        <!--This div is for Expense Tracker-->
+        <div class="card card1">
+          <img class="card-img-top" src="./assets/Images/expense.png" alt="Expense Tracker">
+          <div class="card-body">
+              <h5 class="card-title">Expense Tracker</h5>
+              <p>It calculates your current balance</p>
+              <a href="./Public/expense.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+          </div>
+      </div>
+      <!--End of Expense Tracker-->
+
 
     </div>
 	<!--Back to top button-->
