--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!--Eend of Bootstrap CSS-->
   <!--Buy me a coffee script-->
   <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-    data-id="Astrodevil" data-description="Support me on Buy me a coffee!" data-message="" data-color="#40DCA5"
+    data-id="Astrodevil" data-description="Support me on Buy me a coffee!" data-message="" data-color="#00C2CB"
     data-position="Right" data-x_margin="50" data-y_margin="50">
     </script>
   <!--End of Buy me a coffee script-->
@@ -56,182 +56,12 @@
     </div>
   </nav>
 
-  <h1 class="title">&#123; <span style="color: yellow;">JavaScript</span> Projects &#125;</h1>
+  <h1 class="title">&#123; <span style="color: #FF914D;">JavaScript</span> Projects &#125;</h1>
 
   <div class="container background-container">
     <!--searchbar-->
     <input type="text" id="searchbar" placeholder="Search Project...">
-    <!-- <script>
-      function func() {
-        var input, filter;
-        input = document.getElementById("searchbar");
-        filter = input.value.toUpperCase();
-        if (filter == "ANALOG CLOCK")
-          window.open("Public/Analog_clock.html");
-        if (filter == "PALINDROME CHECKER")
-          window.open("Public/palindrome.html");
-        if(filter == "STOPWATCH")
-          window.open("Public/stopwatch.html");
-        if (filter == "AUTO WRITE TEXT")
-          window.open("Public/auto-write-text.html");
-        if (filter == "WORD DEFINITION")
-          window.open("Public/word_definition.html");
-        if (filter == "CALCULATOR")
-          window.open("Public/calculator.html");
-        if (filter == "COLOR FLIPPER 1")
-          window.open("Public/color_flipper_1.html");
-        if (filter == "COLOR FLIPPER 2")
-          window.open("Public/color_flipper_2.html");
-        if (filter == "DIGITAL CLOCK")
-          window.open("Public/digital_clock.html");
-        if (filter == "DIAL CODE FETCHER")
-          window.open("Public/DialCodeFetcher.html");
-        if (filter == "LOG-IN FORM")
-          window.open("Public/loginform.html");
-        if (filter == "PURPLE HEART ANIMATION")
-          window.open("Public/purple_heart.html");
-        if (filter == "TAKE QUIZ")
-          window.open("Public/quiz.html");
-        if (filter == "MUSIC")
-          window.open("Public/tap_music.html");
-        if (filter == "NOTIFICATION")
-          window.open("Public/toast_notification.html");
-        if (filter == "SPEECH-TO-TEXT-CONVERTER")
-          window.open("Public/Speech-to-Text-Converter.html");
-        if (filter == "CHECK WEATHER")
-          window.open("Public/weather_app.html");
-        if (filter == "GUESS COLOR")
-          window.open("Public/guess_color.html");
-        if (filter == "SPEED TYPER")
-          window.open("Public/Speed_Typer.html");
-        if (filter == "CAESAR CIPHER")
-          window.open("Public/CaesarCipher.html");
-        if (filter == "RESTAURANT WEBSITE")
-          window.open("Public/restaurant/restaurant.html");
-        if (filter == "ROCK PAPER SCISSOR")
-          window.open("Public/rock-paper-scissor/rock-paper-scissor.html");
-        if (filter == "INCREMENTINATOR 2.0")
-          window.open("Public/incrementinator.html");
-        if (filter == "QUOTES")
-          window.open("Public/accordion.html");
-        if (filter == "AIPAN ART HANDCRAFT")
-          window.open("Public/aipanArt.html");
-        if (filter == "AUTO IMAGE SLIDER")
-          window.open("Public/auto_image_slider.html");
-        if (filter == "BMI CALCULATOR")
-          window.open("Public/bmi-calculator.html");
-        if (filter == "COUNT DOWN TIMER")
-          window.open("Public/countdown-timer.html");
-        if (filter == "COUNTER")
-          window.open("Public/counter.html");
-        if (filter == "DRUM KIT")
-          window.open("Public/drum_kit.html");
-        if (filter == "FOOD RECEPIE CENTER")
-          window.open("Public/food_website.html");
-        if (filter == "HEIGHT CONVERTER")
-          window.open("Public/height-converter.html");
-        if (filter == "HULU")
-          window.open("Public/hulu.html");
-        if (filter == "IMAGE EDITOR")
-          window.open("Public/image_editor.html");
-        if (filter == "LOAN CALCULATOR")
-          window.open("Public/loan-calculator.html");
-        if (filter == "MATHS FORMULAE WEBSITE")
-          window.open("Public/maths-formulae.html");
-        if (filter == "MODAL WINDOW GENERATOR")
-          window.open("Public/Modal.html");
-        if (filter == "AN NGO WEBSITE")
-          window.open("Public/NGO.html");
-        if (filter == "NOTE APP")
-          window.open("Public/noteapp.html");
-        if (filter == "POPUP")
-          window.open("Public/popup.html");
-        if (filter == "RANDOM COLOR GENERATOR")
-          window.open("Public/random_color_generator.html");
-        if (filter == "RESPONSIVE NAVIGATION BAR")
-          window.open("Public/responsive_nav.html");
-        if (filter == "RESUME BUILDER")
-          window.open("Public/resume_builder.html");
-        if (filter == "DICE GAME")
-          window.open("Public/dice_game.html");
-        if (filter == "SPEED TYPING")
-          window.open("Public/speed.html");
-        if (filter == "SPOTIFY CLONE")
-          window.open("Public/spotify-clone.html");
-        if (filter == "STONE PAPER SCISSORS")
-          window.open("Public/stone_paper_scissors.html");
-        if (filter == "TIP CALCULATOR")
-          window.open("Public/tip_calculator.html");
-        if (filter == "3D SOLAR SYSTEM")
-          window.open("Public/solar.html");
-        if (filter == "PRIME FACTOR CALCULATOR")
-          window.open("Public/primeCalc.html");
-        if (filter == "MAGIC NOTE")
-          window.open("Public/todo.html");
-        if (filter == "WEATHER CALCULATOR")
-          window.open("Public/weather_app.html");
-        if (filter == "WEIGHT CONVERTER")
-          window.open("Public/weight_conv.html");
-        if (filter == "WORD COUNT CALCULATOR")
-          window.open("Public/word-count-calculator.html");
-        if (filter == "CRYPTO-APP")
-          window.open("Public/crypto_app.html");
-        if (filter == "SCIENTIFIC CALCULATOR")
-          window.open("Public/scientific_calculator.html");
-        if (filter == "GITHUB-PROFILES")
-          window.open("Public/GitHub-Profiles.html");
-        if (filter == "BOOKS LIBRARY")
-          window.open("Public/BooksLibrary.html");
-        if (filter == "GUESS THE NUMBER")
-          window.open("Public/guess-the-number.html");
-        if (filter == "SIMON GAME")
-          window.open("Public/Simon_game.html");
-        if (filter == "PONG GAME")
-          window.open("Public/pong.html");
-        if (filter == "DICTIONARY APP")
-          window.open("Public/dictionary.html");
-        if (filter == "CUSTOM ICE CREAM MAKER")
-          window.open("Public/icecream.html");
-        if (filter == "SNEAKER SITE")
-          window.open("Public/sneaker.html");
-        if (filter == "CRUD PROJECT")
-          window.open("Public/crud-project.html");
-        if (filter == "CURRENCY CONVERTER")
-          window.open("Public/Currency-converter.html");
-        if (filter == "HANGMAN GAME")
-          window.open("./Public/hangman.html");
-        if (filter == "TO-DO LIST")
-          window.open("./Public/to-do.html");
-        if (filter == "MOVIE/TV SERIES QUOTE GENERATOR")
-          window.open(".Public/MovieQuoteGenerator.html");
-        if (filter == "PORTFOLIO WEBSITE")
-          window.open("/Public/multiple-portfolio.html");
-        if (filter == "TRANSPOSE-MATRIX CALCULATOR")
-          window.open("Public/Transpose-Matrix-Calculator.html");
-        if (filter == "PASSWORD GENERATOR")
-          window.open("Public/password_generator.html");
-        if (filter == "MEMORY GAME")
-          window.open("Public/memory.html");
-        if (filter == "RD RETURN CALCULATOR")
-          window.open("./Public/RD-return-calculator.html");
-        if (filter == "SPEECH SYNTHESIS")
-          window.open("./Public/speech_synthesis.html");
-        if (filter == "COLOR CHANGING APP")
-          window.open("./Public/Color-Changing-App.html");
-        if (filter == "Tik Tok Clone")
-          window.open("./Public/Tiktok_Clone.html");
-      	if (filter == "TIC TAC TOE")
-          window.open("./Public/tic-tac-toe.html");
-	      if (filter == "BOOK SHOPPING WEBSITE")
-          window.open("./Public/book-shopping-website/book.html");
-      }
-      if(filter == "MICROSOFT CLONE"){
-        window.open("./Public/microsoftclone.html")
-      }
-	    if(filter == "DRAWING APP"){
-        window.open("./Public/drawingapp.html")
-      }
-    </script> -->
+   
     
   </div>
 
@@ -372,7 +202,7 @@
     </div>
 	<!--Back to top button-->
     <a href = "#top">
-      <button id="back-to-top" style="background-color: #40DCA5;">
+      <button id="back-to-top" style="background-color: #00C2CB;">
         <i class="fa-solid fa-arrow-up"></i>
       </button>
       </a>
