--- a/Public/mapty.html
+++ b/Public/mapty.html
@@ -27,12 +27,12 @@
     ></script>
 
     <!-- <script defer src="other.js"></script> -->
-    <script defer src="./assets/Js/mapty.js"></script>
+    
     <title>mapty // Map your workouts</title>
   </head>
   <body>
     <div class="sidebar">
-      <img src="./assets/Images/mapty_logo.png" alt="Logo" class="logo" />
+      <img src="/assets/Images/mapty_logo.png" alt="Logo" class="logo" />
 
       <ul class="workouts">
         <form class="form hidden">
@@ -133,5 +133,6 @@
     </div>
 
     <div id="map"></div>
+    <script defer src="/assets/Js/mapty.js"></script>
   </body>
 </html>
