type writer effect js project

--- a/Public/type-writer.html
+++ b/Public/type-writer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Type Writer Effect</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/type-writer.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div id="mydiv"></div>
         <button id="mybutton">Type Writer Effect</button>
     </div>
-    <script src="js/index.js"></script>
+    <script src="../assets/Js/type-writer.js"></script>
 </body>
 
 </html>
