--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
   <link href="assets/css/landing_page.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
-  
-
-    <!-- website favicon -->
-    <link rel="icon" href="/favicon-32x32.png">
-
 
   <title>Landing Page</title>
+  
+  <!-- website favicon -->
+  <link rel="icon" href="./favicon-32x32.png">
+
 </head>
 
 <body>
