--- a/Public/Google-clone.html
+++ b/Public/Google-clone.html
@@ -31,7 +31,7 @@
     <!------------------------------------>
     <section class="content-section">
         <div class="content-wrapper">
-            <img class="logo-img" src="../assets/Images/heading.png" alt="Google Logo Image">
+            <img class="logo-img" src="../assets/Images/Google-logo.png" alt="Google Logo Image">
             <div class="search-bar">
                 <i class="fas fa-search"></i>
                 <input id ="search-input" class="search-input" type="text">
