made changes in google clone1

--- a/Public/googleClone1/advancesearch.html
+++ b/Public/googleClone1/advancesearch.html
@@ -3,17 +3,17 @@
 
 <head>
     <title>Google Advanced Search</title>
-    <link rel="stylesheet" href="../assets/css/googleadvancesearch.css">
-    <link rel="icon" href="../assets/Images/googlefavicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../../assets/css/googleclone1/advancesearch.css">
+    <link rel="icon" href="../../assets/Images/googleclone1/favicon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <div id="header-grey">
     <div class="top-left">
-        <img id="heading-logo" src="../assets/Images/google.png">
+        <img id="heading-logo" src="../../assets/Images/googleclone1/google.png">
     </div>
     <div class="top-right">
-        <a id="images" href="./googleclone.html">Search</a>
-        <a id="advance-search" href="./googleimages.html">Images Search</a>
+        <a id="images" href="../googleClone1/googleclone1.html">Search</a>
+        <a id="advance-search" href="../googleClone1/images.html">Images Search</a>
     </div>
 </div>
 
