--- a/Public/googleClone1/images.html
+++ b/Public/googleClone1/images.html
@@ -3,18 +3,18 @@
 
 <head>
     <title>Google Images</title>
-    <link rel="stylesheet" href="../assets/css/googleclone.css">
-    <link rel="icon" href="../assets/Images/googlefavicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../../assets/css/googleclone1/images.css">
+    <link rel="icon" href="../../assets/Images/googleclone1/favicon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <div class="container">
         <div class="top-right">
-            <a id="images" href="./googleclone.html">Search</a>
-            <a id="advance-search" href="./googleadvancesearch.html">Advance Search</a>
+            <a id="images" href="../googleClone1/googleclone1.html">Search</a>
+            <a id="advance-search" href="../googleClone1/advancesearch.html">Advance Search</a>
         </div>
-        <center><img id="heading" src="../assets/Images/gimage.png"></center>
+        <center><img id="heading" src="../../assets/Images/googleclone1/gimage.png"></center>
         <center>
             <form action="https://google.com/search">
                 <input autofocus id="search-field" type="text" name="q">
