Centered Heading and added BG image
On line 9 is where the background image was added as well as centering the heading  on line 13-6.

--- a/Public/height-converter.html
+++ b/Public/height-converter.html
@@ -6,16 +6,20 @@
 
 </head>
 
-
+<body style = "background: url(https://i.pinimg.com/originals/ef/7f/b1/ef7fb1b37078b6a2aef8e40710446bfa.jpg)"></body>
 <body>
 
 	<div id ="container">
-		<h1> Height Converter</h1>
+		<h1>Height Converter</h1>
+		<style>
+			h1{padding-left: 50px;}
+		</style>
 		Feet
 		<input type="text" id="feet" > <br/>
 		Inches
 		<input type="text" id="inches" > <br/>
 		<input type="submit" id="submit" value="Convert to cm"> <br/><br/>
+		
 
 	  <div id="result"></div>
 
