--- a/Public/aipanArt.html
+++ b/Public/aipanArt.html
@@ -15,12 +15,21 @@
             </svg>
             <span class="ml-3 text-xl">LIL ART GALLERY</span>
           </a>
-          <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a href="/"class="mr-5 hover:text-gray-900"></a>Home</a>
-            <a href="/"class="mr-5 hover:text-gray-900"></a>About</a>
-            <a href="/"class="mr-5 hover:text-gray-900"></a>Services</a>
-            <a href="/"class="mr-5 hover:text-gray-900"></a>Contact</a>
-          </nav>-
+          <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center ">
+            <a href="/"class="mr-5 hover:text-gray-900 nav">Home</a>
+            <a href="/"class="mr-5 hover:text-gray-900 nav">About</a>
+            <a href="/"class="mr-5 hover:text-gray-900 nav">Services</a>
+            <a href="/"class="mr-5 hover:text-gray-900 nav">Contact</a>
+          </nav>
+          <style>
+            .nav:hover{
+              display: block;
+              background-color: rgb(117, 99, 253);
+              padding: 8px;
+              border-radius: 7px;
+
+            }
+          </style>
           <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outli-ne-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">BUY NOW
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="r-ound" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>-
