--- a/Public/Reflex_Training.html
+++ b/Public/Reflex_Training.html
@@ -37,34 +37,28 @@
             <form name="response">
 
                 <input type="button" class="btn" value="Start" onClick="testStart()">
-                <!-- <input type="button" class="btn" value="Stop" onClick="stopTest()"> -->
             </form>
-        </div>
-
-        <div class="result">
-            <p id="result"></p>
         </div>
 
     </div>
 
     <div class="playground" id="playground">
         <div class="frame">
-            <div class="target" id="target">
+            <div class="target" id="target" onClick="timeTaken()">
             </div>
-            <div class="page">
+            <div class="page" id="page">
                 <div class="number"> <span class="num3">3</span><span class="num2">2</span><span class="num1">1</span>
                 </div>
             </div>
         </div>
-        <div class="btn_field">
+        <div class="stop_btn">
             <form name="response">
-
-                <input type="button" class="btn" value="Restart Test" onClick="testStop()">
-                <!-- <input type="button" class="btn" value="Restart Test" onClick="testStop()"> -->
-                <!-- <input type="button" class="btn" value="Stop" onClick="stopTest()"> -->
+                <input type="button" id="stop_btn" class="btn" value="Restart Test" onClick="testStop()">
             </form>
         </div>
 
+
+        <div id="result"></div>
     </div>
 
     <script src="../assets/Js/Reflex_training.js"></script>
