former projects modified

--- a/Public/Quiz_app.html
+++ b/Public/Quiz_app.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/Quiz_app.css">
+    <link rel="stylesheet" href="../assets/css/Quiz_app.css">
 </head>
 
 <body>
@@ -39,6 +39,6 @@
         </div>
     </div>
 </body>
-<script src="/assets/Js/Quiz_app.js"></script>
+<script src="../assets/js/Quiz_app.js"></script>
 
 </html>
