--- a/Public/ReportCalculator.html
+++ b/Public/ReportCalculator.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Report</title>
-    <link rel="stylesheet" href="/assets/css/ReportCalculator.css">
+    <link rel="stylesheet" href="../assets/css/ReportCalculator.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
@@ -37,6 +37,6 @@
 
     </div>
 </body>
-<script src="/assets/Js/ReportCalculator.js"></script>
+<script src="../assets/js/ReportCalculator.js"></script>
 
 </html>
