--- a/Public/Travel game.html
+++ b/Public/Travel game.html
@@ -20,6 +20,6 @@
       <h2>For music PRESS 'M' For light PRESS 'L'</h2>
     </div>
     
-    <script src="../assets/Js/travel  game.js"></script>
+    <script src="../assets/js/travel  game.js"></script>
   </body>
 </html>
