--- a/Public/colorchooser.html
+++ b/Public/colorchooser.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/colorchooser.css">
+    <link rel="stylesheet" href="../assets/css/colorchooser.css">
     <title>Document</title>
     </head>
 <body>
@@ -18,5 +18,5 @@
     </select>
 </div>
 </body>
-<script src="/assets/Js/colorchooser.js"></script>
+<script src="../assets/Js/colorchooser.js"></script>
 </html>
