--- a/Public/mapty.html
+++ b/Public/mapty.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="./assets/Images/mapty_icon.png" />
+    <link rel="shortcut icon" type="image/png" href="../assets/Images/mapty_icon.png" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./assets/css/mapty.css" />
+    <link rel="stylesheet" href="../assets/css/mapty.css" />
 
     <link
       rel="stylesheet"
@@ -32,7 +32,7 @@
   </head>
   <body>
     <div class="sidebar">
-      <img src="/assets/Images/mapty_logo.png" alt="Logo" class="logo" />
+      <img src="../assets/Images/mapty_logo.png" alt="Logo" class="logo" />
 
       <ul class="workouts">
         <form class="form hidden">
@@ -133,6 +133,6 @@
     </div>
 
     <div id="map"></div>
-    <script defer src="/assets/Js/mapty.js"></script>
+    <script defer src="../assets/js/mapty.js"></script>
   </body>
 </html>
