--- a/Public/modalclosingbutton.html
+++ b/Public/modalclosingbutton.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modal</title>
-    <link rel="stylesheet" href="/assets/css/Modal.css">
+    <link rel="stylesheet" href="../assets/css/Modal.css">
     <style>
         body {
             background-image: url("/assets/Images/background.jpg");
@@ -26,7 +26,7 @@
     <div class="main">
         <button id="bringmodal"> Show Modal </button>
     </div>
-    <script src="/assets/Js/Modal.js"></script>
+    <script src="../assets/js/Modal.js"></script>
 
 </body>
 
