--- a/Public/multiple-portfolio.html
+++ b/Public/multiple-portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY DEV-FOLIO</title>
-    <link rel="stylesheet" href="/assets/css/multiple-portfolio.css">
+    <link rel="stylesheet" href="../assets/css/multiple-portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -258,6 +258,6 @@
         <p>Created by Manisha </p>
     </footer>
 
-    <script src="/assets/Js/multiple-portfolio.js"></script>
+    <script src="../assets/js/multiple-portfolio.js"></script>
 </body>
 </html>
