--- a/Public/placeholder.html
+++ b/Public/placeholder.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Placeholder</title>
-    <link rel="stylesheet" href="/assets/css/placeholder.css">
+    <link rel="stylesheet" href="../assets/css/placeholder.css">
   </head>
   <body>
     <section id="container">
       <button>Hover me Please</button>
       <div id="tooltip">Hello!! I am placeholder</div>
     </section>
-    <script src="/assets/Js/placeholder.js"></script>
+    <script src="../assets/js/placeholder.js"></script>
   </body>
