--- a/Public/musicPlayer.html
+++ b/Public/musicPlayer.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link rel="stylesheet" href="musicPlayer.css" />
+    <link rel="stylesheet" href="../assets/css/musicPlayer.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>music player</title>
@@ -184,6 +184,6 @@
       </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../assets/js/musicPlayer.js"></script>
   </body>
 </html>
