--- a/Public/responsiveLanding.html
+++ b/Public/responsiveLanding.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Landing Page</title>
-    <link rel="stylesheet" href="/assets/css/responsiveLanding.css" />
+    <link rel="stylesheet" href="../assets/css/responsiveLanding.css" />
   </head>
   <body>
     <main>
       <div class="big-wrapper light">
-        <img src="/assets/Images/ResponsiveLanding/shape.png" alt="" class="shape" />
+        <img src="../assets/Images/ResponsiveLanding/shape.png" alt="" class="shape" />
         <header>
           <div class="container">
             <div class="logo">
-              <img src="/assets/Images/ResponsiveLanding/logo.png" alt="logo" />
+              <img src="../assets/Images/ResponsiveLanding/logo.png" alt="logo" />
               <h3>Danvo</h3>
             </div>
 
@@ -52,7 +52,7 @@
             </div>
 
             <div class="right">
-              <img src="/assets/Images/ResponsiveLanding/person.png" alt="" class="person" />
+              <img src="../assets/Images/ResponsiveLanding/person.png" alt="" class="person" />
             </div>
           </div>
         </div>
@@ -71,6 +71,6 @@
 
     <!-- Javascript -->
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-    <script src="/assets/Js/responsiveLanding.js"></script>
+    <script src="../assets/js/responsiveLanding.js"></script>
   </body>
 </html>
