--- a/Public/snake.html
+++ b/Public/snake.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
-    <link rel="stylesheet" href="/assets/css/snake.css">
+    <link rel="stylesheet" href="../assets/css/snake.css">
 </head>
 <body>
     <div class="body">
@@ -14,5 +14,5 @@
         <div id="board"></div>
     </div>
 </body>
-<script src="/assets/Js/snake.js"></script>
+<script src="../assets/js/snake.js"></script>
 </html>
