--- a/Public/Coin-toss-game.html
+++ b/Public/Coin-toss-game.html
@@ -6,7 +6,7 @@
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
     <!--Stylesheet-->
-    <link rel="stylesheet" href="assets/css/coin-toss.css">
+    <link rel="stylesheet" href="../assets/css/coin-toss.css">
 </head>
 <body>
     <div class="container">
@@ -32,6 +32,6 @@
         </div>
     </div>
     <!--Script-->
-    <script src="assets/Js/coin-toss.js"></script>
+    <script src="../assets/Js/coin-toss.js"></script>
 </body>
 </html>
