Added BMI Chart and updated Background image

--- a/Public/bmi-calculator.html
+++ b/Public/bmi-calculator.html
@@ -13,7 +13,7 @@
     <div class="background_image">
      <div class="overlay_effect">
        <div class="Container">
-        <h2>BMI Calculator</h2>
+        <h2>BMI Calculator <hr></h2>
         <div class="box">
            <!--Weight Input Field-->
          <div id="weight_field">
@@ -36,6 +36,42 @@
         </div>
         </div>
       <!--footer section-->
+      <div class="new-addition">
+         <table>
+            <thead>
+               <tr>
+                  <th> Body Mass Classification</th>
+                  <th>Body Mass Index(BMI)</th>
+               </tr>
+            </thead>
+            <tbody>
+               <tr>
+                  <td>Underweight</td>
+                  <td>
+                     <18.5</td>
+               </tr>
+               <tr>
+                  <td>Noraml</td>
+                  <td>18.5 to 24.9</td>
+               </tr>
+               <tr>
+                  <td>Overweight</td>
+                  <td>25 to 29.9</td>
+               </tr>
+               <tr>
+                  <td>Obese(I)</td>
+                  <td>30 to 34.9</td>
+               </tr>
+               <tr>
+                  <td>Obese(II)</td>
+                  <td>35 to 39.9</td>
+               </tr>
+               <tr>
+                  <td>Obese(III)</td>
+                  <td>>=40</td>
+               </tr>
+            </tbody>
+         </table>
       
        </div>
     </div>
