--- a/Public/Coin-toss-game.html
+++ b/Public/Coin-toss-game.html
@@ -16,10 +16,10 @@
         </div>
         <div class="coin" id="coin">
             <div class="heads">
-                <img src="assets/Images/coin-toss-heads.svg">
+                <img src="../assets/Images/coin-toss-heads.svg">
             </div>
             <div class="tails">
-                <img src="assets/Images/coin-toss-tails.svg">
+                <img src="../assets/Images/coin-toss-tails.svg">
             </div>
         </div>
         <div class="buttons">
