--- a/Public/country_capital_homepage.html
+++ b/Public/country_capital_homepage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/country_capital_homepage.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-  <center>  <img src="./images/bg.jpg">
+  <center>  <img src="../assets/Images/country_capital_homepage/bg.jpg">
       <div>  <h2>Enter Country Name:</h2>
        <input class="country"><br>
      
         <input id="clickme" type="button" value="See Capital City" class="btn btn-primary"/>
       <p  class="capitals"></p></center></div>
-    <script src="script.js"></script>
+    <script src="../assets/Js/country_capital_homepage.js"></script>
 </body>
