--- a/Public/tic-tac-toe.html
+++ b/Public/tic-tac-toe.html
@@ -1,40 +1,59 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="../assets/css/tic-tac-toe/bootstrap.min.css">
-        <link rel="stylesheet" href="../assets/css/tic-tac-toe/main.css">
-    </head>
-    <body>
-        <div class="container box">
-            <div class="row w-100 justify-content-center">
-                <div class="col-md-9">
-                    <div class="item d-flex justify-content-center align-items-center">
-                        <button class="st-btn" onclick="start()">Start</button>
-                    </div>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <td><input oninput="setTimeout(getData,1000);setTimeout(gameOver,1300)" id="_1" placeholder="x/o" type="text"></td>
-                                <td><input oninput="setTimeout(getData,1000);setTimeout(gameOver,1300)" id="_2" placeholder="x/o" type="text"></td>
-                                <td><input oninput="setTimeout(getData,1000);setTimeout(gameOver,1300)" id="_3" placeholder="x/o" type="text"></td>
-                            </tr>
-                            <tr>
-                                <td><input oninput="setTimeout(getData,1000);setTimeout(gameOver,1300)" id="_4" placeholder="x/o" type="text"></td>
-                                <td><input oninput="setTimeout(getData,1000);setTimeout(gameOver,1300)" id="_5" placeholder="x/o" type="text"></td>
-                                <td><input oninput="setTimeout(getData,1000);setTimeout(gameOver,1300)" id="_6" placeholder="x/o" type="text"></td>
-                            </tr>
-                            <tr>
-                                <td><input oninput="setTimeout(getData,1000);setTimeout(gameOver,1300)" id="_7" placeholder="x/o" type="text"></td>
-                                <td><input oninput="setTimeout(getData,1000);setTimeout(gameOver,1300)" id="_8" placeholder="x/o" type="text"></td>
-                                <td><input oninput="setTimeout(getData,1000);setTimeout(gameOver,1300)" id="_9" placeholder="x/o" type="text"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <script src="../assets/Js/tic-tac-toe/jquery-3.5.1.slim.min.js"></script>
-        <script src="../assets/Js/tic-tac-toe/popper.min.js"></script>
-        <script src="../assets/Js/tic-tac-toe/bootstrap.min.js"></script>
-        <script src="../assets/Js/tic-tac-toe/main.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Tic Tac Toe Game </title>
+    <link rel="stylesheet" href="../assets/css/tic-tac-toe.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+</head>
+<body>
+  <!-- select box -->
+  <div class="select-box">
+    <header>Tic Tac Toe</header>
+    <div class="content">
+      <div class="title">Select One ?</div>
+      <div class="options">
+        <button class="playerX">X</button>
+        <button class="playerO">O</button>
+      </div>
+    </div>
+  </div> 
+
+  <!-- playboard section -->
+  <div class="play-board">
+    <div class="details">
+      <div class="players">
+        <span class="Xturn">X's Turn</span>
+        <span class="Oturn">O's Turn</span>
+        <div class="slider"></div>
+      </div>
+    </div>
+    <div class="play-area">
+      <section>
+        <span class="box1"></span>
+        <span class="box2"></span>
+        <span class="box3"></span>
+      </section>
+      <section>
+        <span class="box4"></span>
+        <span class="box5"></span>
+        <span class="box6"></span>
+      </section>
+      <section>
+        <span class="box7"></span>
+        <span class="box8"></span>
+        <span class="box9"></span>
+      </section>
+    </div>
+  </div>
+
+  <!-- result box -->
+  <div class="result-box">
+    <div class="won-text"></div>
+    <div class="btn"><button>Replay</button></div>
+  </div>
+
+  <script src="../assets/Js/tic-tac-toe.js"></script>
+
+</body>
 </html>
