Added reset password page and background image

--- a/Public/loginform.html
+++ b/Public/loginform.html
@@ -22,7 +22,7 @@
             </div>
             <button class="form__button" type="submit">Continue</button>
             <p class="form__text">
-                <a href="#" class="form__link">Forgot your password?</a>
+                <a href="#" class="form__link" id="linkResetPassword">Forgot your password?</a>
             </p>
             <p class="form__text">
                 <a class="form__link" href="./" id="linkCreateAccount">Don't have an account? Create account</a>
@@ -50,6 +50,18 @@
             <button class="form__button" type="reset">Continue</button>
             <p class="form__text">
                 <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
+            </p>
+        </form>
+        <form class="form form--hidden" id="resetPassword">
+            <h1 class="form__title">Reset Password</h1>
+            <div class="form__message form__message--error"></div>
+            <div class="form__input-group">
+                <input type="text" class="form__input" autofocus placeholder="Email Address">
+                <div class="form__input-error-message"></div>
+            </div>
+            <button class="form__button" type="reset">Send reset password instruction</button>
+            <p class="form__text">
+                <a class="form__link" href="./" id="linkHome">Go back to previous page</a>
             </p>
         </form>
     </div>
