github profile not work

--- a/Public/GitHub-Profiles.html
+++ b/Public/GitHub-Profiles.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>GitHub Profiles</title>
-        <link rel="stylesheet" href="../assets/css/GitHub-Profiles.css" />
-        <script src="../assets/js/GitHub-Profiles.js" defer></script>
+        <link rel="stylesheet" href="../assets/css/GitHub-Profiles.css"/>
+        
     </head>
     <body>
         <form id="form">
             <input type="text" id="search" placeholder="Search a Github User" />
         </form>
         <main id="main"></main>
+        <script src="../assets/Js/GitHub-Profiles.js"></script>
     </body>
 </html>
