--- a/Public/GitHub-Profiles.html
+++ b/Public/GitHub-Profiles.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GitHub Profiles</title>
-        <link rel="stylesheet" href="../assets/css/GitHub-Profiles.css"/>
+        <link rel="stylesheet" href="../assets/css/GitHub-Profiles.css">
         
     </head>
     <body>
