--- a/Public/Wordle-clone.html
+++ b/Public/Wordle-clone.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name = "viewport" content="width-device=width,initial-scale=1.0">
     <title>Wordle Clone</title>
-    <link rel="stylesheet" href="/assets/css/Wordle-clone.css">
+    <link rel="stylesheet" href="../assets/css/Wordle-clone.css">
 </head>
 <body>
     <div id="container">
@@ -57,6 +57,6 @@
           </div>
         </div>
       </div>
-<script src="/assets/Js/Wordle-clone.js"></script>
+<script src="../assets/Js/Wordle-clone.js"></script>
 </body>
 </html>
