--- a/Public/FeedbackThankyou.html
+++ b/Public/FeedbackThankyou.html
@@ -12,19 +12,20 @@
 <body>
     
     <div id="panel" class="panel-container">
-        <strong>HOW MUCH YOU LIKE YOUR WEBSITE !!</strong>
+        <strong>HOW MUCH YOU LIKE OUR WEBSITE !!</strong>
+        <h5>click on the text to select rating</h5>
         <div id="rating-container" onclick="myFunction(event)">
-            <div id="rating" >
-                <img src="../assets/Images/FeedbackThankyou/bad.jpg" alt="bad">
-                <small>BAD</small>
+            <div>
+            <img src="../assets/Images/FeedbackThankyou/bad.jpg" alt="bad" >   
+                <small id="rating" class="rating" >BAD</small>
             </div>
-            <div id="rating" >
-                <img src="../assets/Images/FeedbackThankyou/moderate.png" alt="moderate">
-                <small>MODERATE</small>
+            <div>
+                <img src="../assets/Images/FeedbackThankyou/moderate.png" alt="moderate"  >
+                <small id="rating" class="rating">MODERATE</small>
             </div>
-            <div id="rating" >
-                <img src="../assets/Images/FeedbackThankyou/good.jpg" alt="good">
-                <small>GOOD</small>
+            <div>
+                <img src="../assets/Images/FeedbackThankyou/good.jpg" alt="good">  
+                <small id="rating" class="rating">GOOD</small>
             </div>
         </div>
         <button class="btn" onclick="reply()">SEND FEEDBACK</button>
