--- a/Public/tearable-cloth.html
+++ b/Public/tearable-cloth.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tearable Cloth</title>
-    <link rel="stylesheet" type="text/css" href="cloth.css" />
+    <link rel="stylesheet" type="text/css" href="tearable-cloth.css" />
 </head>
 <body>
     <canvas id="canvas"></canvas>
@@ -25,5 +25,5 @@
     <p id="windSpeed"></p>
   <div>
 </body>
-<script type="text/javascript" src="cloth.js"></script>
+<script type="text/javascript" src="tearable-cloth.js"></script>
 </html>
