--- a/Public/picture-frame.html
+++ b/Public/picture-frame.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/picture-frame.css">
     <title>Dynamic Pitcure Frame</title>
 </head>
 <body>
@@ -46,6 +46,6 @@
   </div>
 </div>
 
-  <script src="script.js"></script>
+  <script src="../assets/Js/picture-frame.js"></script>
 </body>
 </html>
