--- a/Public/FAQcollapse.html
+++ b/Public/FAQcollapse.html
@@ -51,6 +51,6 @@
             </button>
         </div>
     </div>
-    <script src="../assets/Js/FAqcollapse.js"></script>
+    <script src="../assets/Js/FAQcollapse.js"></script>
 </body>
 </html>
