remove folders with single files

--- a/Public/check-my-ip.html
+++ b/Public/check-my-ip.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../../assets/css/check-my-ip/style.css">
+  <link rel="stylesheet" href="../assets/css/check-my-ip.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 </head>
 
@@ -16,8 +16,8 @@
     </ul>
   </section>
 
-  <script src="../../assets/Js/check-my-ip/main.js"></script>
-  <script src="../../assets/Js/check-my-ip/getIP.js"></script>
+  <script src="../assets/Js/check-my-ip/main.js"></script>
+  <script src="../assets/Js/check-my-ip/getIP.js"></script>
 
 </body>
 </html>
