fixed the src link in script tag of counter.html

--- a/Public/counter.html
+++ b/Public/counter.html
@@ -31,7 +31,7 @@
         </div>
     </main>
     <!-- javascript -->
-    <script src="../assets/js/counter.js"></script>
+    <script src="../assets/Js/counter.js"></script>
 </body>
 
 </html>
