made some style changes and deleted some js code lines related to navbar color

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <!-- CARDS SECTION STARTS HERE -->
 
   <div id="scrollto" class="container">
-    <div class="row" id="cardd">
+    <div class="row card-container" id="cardd">
         
     </div>
 
